# text-icu-translit

./: .travis.yml  README.md  icu.c  text-icu-translit.cabal  translit.hs
Data/Text/ICU/: Translit.hs
Data/Text/ICU/Translit/: ICUHelper.hsc  IO.hs  Internal.hs  Play.hs
cbits/: trans.c
include/: trans.h
tests/: Test.hs
