
name:                text-icu-translit
version:             0.1.0.0
synopsis:            ICU transliteration
description:
  Bindings to the transliteration features by the
  International Components for Unicode (ICU) library

license:             BSD3
license-file:        LICENSE
author:              Antonio Nikishaev
maintainer:          me@lelf.lu
-- copyright:           
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  include/trans.h

library
  exposed-modules:     Data.Text.ICU.Translit
  other-modules:       Data.Text.ICU.Translit.Internal,
                       Data.Text.ICU.Translit.ICUHelper

  ghc-options: -Wall

  c-sources: cbits/trans.c
  include-dirs: include

  extra-libraries: icuuc
  if os(mingw32)
    extra-libraries: icuin icudt
  else
    extra-libraries: icui18n icudata

  -- other-extensions:    
  build-depends:       base >=4 && <5, text >= 1.0
  -- hs-source-dirs:      
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             Test.hs
  build-depends:       base, text,
                       text-icu >= 0.6.3,
                       text-icu-translit,
                       QuickCheck >= 2.4,
                       test-framework >= 0.8,
                       test-framework-quickcheck2 >= 0.3

